syntax = "proto3";

package services.metrics;

option go_package = "github.com/vysogota0399/mem_stats_monitoring/pkg/gen/services/metrics";

import "pkg/proto/services/metrics/item.proto";

message ShowMetricResponse {
  Item items = 1;
}